--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,6 @@
    "minimum_chrome_version": "6.0.472.41",
    "name": "OneClick",
    "permissions": [ "contextMenus", "tabs", "webRequest", "webRequestBlocking", "http://*/*"],
+   "update_url": "http://torque.bittorrent.com/oneclick/updates.xml",
    "version": "0.1"
 }
