adding upsell dialogs

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
    },
    "minimum_chrome_version": "19.0.1057.0",
    "name": "OneClick - Torrent Easier",
-   "permissions": ["plugins", "webRequest", "webRequestBlocking", "http://*/*"],
+   "permissions": ["tabs", "plugins", "webRequest", "webRequestBlocking", "http://*/*"],
    "update_url": "http://torque.bittorrent.com/oneclick/oneclick.xml",
    "version": "0.5",
    "plugins": [
