updating to use the custom mime type and moving javascript to external file

--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,6 @@
       { "path": "plugin-linux.so" },
       { "path": "plugins/Torque.plugin" },
       **/
-      { "path": "plugins/npTorque.dll" }
+      { "path": "plugins/npTorqueChrome.dll" }
    ]   
 }
